--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@ Email: KunyeShen@outlook.com
 </tr>
 
 <h3>
-[<a href="https://scholar.google.com.hk/citations?user=q6_PkywAAAAJ&hl=zh-CN" target="blank" style="color:#58ACFA">[Google Scholar(谷歌学术)]</a>]
-[<a href="https://github.com/Kunye-Shen" target="blank" style="color:#58ACFA">[Code & Data]</a>]
+[<a href="https://scholar.google.com.hk/citations?user=q6_PkywAAAAJ&hl=zh-CN" target="blank" style="color:#58ACFA">Google Scholar(谷歌学术)</a>]
+[<a href="https://github.com/Kunye-Shen" target="blank" style="color:#58ACFA">Code & Data</a>]
 </h3>
 
 
 <h3><div style="color:red">News</div></h3>
-<li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</li>
+<li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!
+    论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!
+</li>
 
 <h3><div style="color:#58ACFA">Education</div></h3>
 <li>2019.09--Now: B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
