--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Email: KunyeShen@outlook.com
 
 
 <h3><div style="color:red">News</div></h3>
-<li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS! <br> 论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</li>
+<li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS! 论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</li>
 
 <h3><div style="color:#58ACFA">Education</div></h3>
 <li>2019.09--Now: B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
