--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Email: KunyeShen@outlook.com
 <li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</li>
 
 <h3><div style="color:#58ACFA">Education</div></h3>
-<li>2019.09--Now: B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
+<li>B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
 
 <h3><div style="color:#58ACFA">Recently accepted</h3>
 
