--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</li>
+<li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
+    论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
 
 <h3><div style="color:#58ACFA">Education</div></h3>
 <li>B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
