--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@ Email: KunyeShen@outlook.com
 
 
 <h3><div style="color:red">News</div></h3>
-<li> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</li>
+<li><p> I became a student member of China Society of Image And Graphics</br>
+    我成为了中国图象图形学会学生会员!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
     论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
+<li><p> Invention patent "A Remote sensing image saliency Detection Method Based on innovative edge feature Extraction Method" has entered the substantive review stage</br>
+    发明专利《一种基于创新边缘特征提取方法的遥感图像显著性检测方法》已进入实质审查阶段!</p></li>
+<li><p> I won the "LAN QIAO" National Collegiate Programming Contest, and the National Excellence Award in the C/C++ programming Group B</br>
+    我获得"蓝桥杯"全国大学生编程竞赛C/C++程序设计B组国家优秀奖!</p></li>
 
 <h3><div style="color:#58ACFA">Education</div></h3>
 <li>B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
@@ -105,12 +110,18 @@ Email: KunyeShen@outlook.com
 <br>
 Xiaofei Zhou, <b>Kunye Shen<b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
 </br>
-<em>IEEE Transactions on Geoscience and Remote Sensing (<b>T-GRS</b>)</em>, 2021.
+<em>IEEE Transactions on Geoscience and Remote Sensing (T-GRS)</em>, 2021.
 <br>
 <a href="https://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=9474908&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50Lzk0NzQ5MDg=">[Paper]</a>
 <a href="https://github.com/Kunye-Shen/EMFINet">[Github]</a>
 </div>
 
+<h3><div style="color:#58ACFA">Research</h3>
+</br>
+My research interests lie in computer vision and visual saliency analysis.
+</br>
+我的研究方向主要为计算机视觉与视觉显著性分析。
+</br>
 
 <br clear="both">
 <br>
