--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p> I became a student member of China Society of Image And Graphics</br>
+<li><p> I became a student member of China Society of Image And Graphics！</br>
     我成为了中国图象图形学会学生会员!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
     论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
