--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@ Email: KunyeShen@outlook.com
 <br>
 Xiaofei Zhou, <b>Kunye Shen<b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
 </br>
-<em>IEEE Transactions on Geoscience and Remote Sensing</em> (<b>T-GRS<b>), 2021.
+IEEE Transactions on Geoscience and Remote Sensing (T-GRS), 2021.
 <br>
 <a href="https://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=9474908&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50Lzk0NzQ5MDg=">[Paper]</a>
 <a href="https://github.com/Kunye-Shen/EMFINet">[Github]</a>
 </div>
 
 <h3><div style="color:#58ACFA">Research</h3>
-</br>
 My research interests lie in computer vision and visual saliency analysis.
 </br>
 我的研究方向主要为计算机视觉与视觉显著性分析。
