--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p> I became a student member of China Society of Image And Graphics！</br>
+<li><p> I attended VALSE 2021!</br>
+    我参与了VALSE 2021!</p></li>
+<li><p> I became a student member of China Society of Image And Graphics!</br>
     我成为了中国图象图形学会学生会员!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
     论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
-<li><p> Invention patent "A Remote sensing image saliency Detection Method Based on innovative edge feature Extraction Method" has entered the substantive review stage</br>
+<li><p> Invention patent "A Remote sensing image saliency Detection Method Based on innovative edge feature Extraction Method" has entered the substantive review stage!</br>
     发明专利《一种基于创新边缘特征提取方法的遥感图像显著性检测方法》已进入实质审查阶段!</p></li>
-<li><p> I won the "LAN QIAO" National Collegiate Programming Contest, and the National Excellence Award in the C/C++ programming Group B</br>
+<li><p> I won the "LAN QIAO" National Collegiate Programming Contest, and the National Excellence Award in the C/C++ programming Group B!</br>
     我获得"蓝桥杯"全国大学生编程竞赛C/C++程序设计B组国家优秀奖!</p></li>
 </ul>
 
