--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p> I attended VALSE 2021!</br>
-    我参与了VALSE 2021!</p></li>
+<li><p> I attended VALSE(Vision And Learning SEminar) 2021!</br>
+    我参与了 VALSE(Vision And Learning SEminar) 2021!</p></li>
 <li><p> I became a student member of China Society of Image And Graphics!</br>
     我成为了中国图象图形学会学生会员!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
