--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
+<li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
+    论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
 <li><p> I attended VALSE(Vision And Learning SEminar) 2021!</br>
     我参与了 VALSE(视觉与学习青年学者研讨会) 2021!</p></li>
 <li><p> I became a student member of China Society of Image And Graphics!</br>
