--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ Email: KunyeShen@outlook.com
     论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
 <li><p> I attended VALSE(Vision And Learning SEminar) 2021!</br>
     我参与了 VALSE(视觉与学习青年学者研讨会) 2021!</p></li>
+<li><p> The college's scientific research project "Deep learning based RGBD salient object detection" I participated in has been concluded!</br>
+    我参与的院科研立项“基于深度学习的RGBD图像显著性检测”已结题!</p></li>
 <li><p> I became a student member of China Society of Image And Graphics!</br>
     我成为了中国图象图形学会学生会员!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
