--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@ Email: KunyeShen@outlook.com
 
 <div class="publication">
 <strong>
+    Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images
+</strong>
+<br>
+<b>Kunye Shen</b>, Xiaofei Zhou, Bin Wan, Ran Shi, Jiyong Zhang
+</br>
+<em>IEEE Geoscience and Remote Sensing Letters (<b>GRSL</b>)</em>, 2021.
+<br>
+<a href="https://ieeexplore.ieee.org/abstract/document/9739705/">[Paper]</a>
+<a href="https://github.com/Kunye-Shen/FSMINet">[Github]</a>
+<strong>
     Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images
 </strong>
 <br>
