--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
+<li><p> Invention patent "A saliency detection method of strip steel surface defects based on boundary information" has entered the substantive review stage!</br>
+    发明专利《一种基于边缘信息的钢铁表面缺陷显著性检测方法》已进入实质审查阶段!</p></li>
 <li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
 <li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
