--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
 </div>
 
 <h3><div style="color:#58ACFA">Research</h3>
-My research interests lie in computer vision and visual saliency analysis.
+My research interests lie in computer vision, visual saliency analysis and lightweight model.
 </br>
-我的研究方向主要为计算机视觉与视觉显著性分析。
+我的研究方向主要为计算机视觉，视觉显著性分析和轻量化模型。
 </br>
 
 <br clear="both">
