--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
 <h3><div style="color:#58ACFA">Research</h3>
 My research interests lie in computer vision, visual saliency analysis and lightweight model.
 </br>
-我的研究方向主要为计算机视觉，视觉显著性分析和轻量化模型。
+我的研究方向主要为计算机视觉，视觉显著性分析和模型轻量化。
 </br>
 
 <br clear="both">
