--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
+<li><p> Invention patent "A lightweight saliency detection method of remote sensing images based on compression module" has entered the substantive review stage!</br>
+    发明专利《一种基于压缩模块的轻量化遥感图像显著性检测方法》已进入实质审查阶段!</p></li>
 <li><p> Invention patent "A saliency detection method of strip steel surface defects based on boundary information" has entered the substantive review stage!</br>
     发明专利《一种基于边缘信息的钢铁表面缺陷显著性检测方法》已进入实质审查阶段!</p></li>
 <li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
