--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div id="container">
 <div id="content">
 <div id="sidebar">
-<a href="Personal photo.png"><img src="./Personal photo.png" id="me" itemprop="photo"></a>
+<a href="Personal photo.png"><img src="./Personal photo.jpg" id="me" itemprop="photo"></a>
 </div>
 
 <tr>
