--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@ Email: KunyeShen@outlook.com
 
 <div class="publication">
 <strong>
+    Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images
+</strong>
+<br>
+Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang, Chenggang Yan
+</br>
+<em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.
+<br>
+<a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
+<a href="https://github.com/Kunye-Shen/ERPNet">[Github]</a>
+</br>
+<strong>
     Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images
 </strong>
 <br>
