--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ Hangzhou Dianzi University
 <br>
 Address: Room 703, South of 4th Building, Hangzhou Dianzi University
 <br>
-No.1158, No.2 Street, Hangzhou Economic Development Zone, Hangzhou, Zhejiang, China, 310018
+No.1158, No.2 Street, Qiantang Area, Hangzhou, Zhejiang, China, 310018
 <br>
-通讯地址: 中国浙江省杭州市杭州经济开发区2号大街1158号杭州电子科技大学4教南703
+通讯地址: 浙江省杭州市钱塘区2号大街1158号杭州电子科技大学4教南703
 <br>
 邮编: 310018
 <br>
