--- a/index.html
+++ b/index.html
@@ -89,15 +89,13 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:#58ACFA">Education</div></h3>
 <ul>
-<li>B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
+<li>2019-2023 B.E. degree, School of Automation, Hangzhou Dianzi University.</li>
 </ul>
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p> Invention patent "A lightweight saliency detection method of remote sensing images based on compression module" has entered the substantive review stage!</br>
-    发明专利《一种基于压缩模块的轻量化遥感图像显著性检测方法》已进入实质审查阶段!</p></li>
-<li><p> Invention patent "A saliency detection method of strip steel surface defects based on boundary information" has entered the substantive review stage!</br>
-    发明专利《一种基于边缘信息的钢铁表面缺陷显著性检测方法》已进入实质审查阶段!</p></li>
+<li><p></br> I have been recommended to Shanghai University for a doctoral degree!
+    我保送至上海大学攻读博士研究生！</p></li>
 <li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
 <li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
@@ -110,10 +108,6 @@ Email: KunyeShen@outlook.com
     我成为了中国图象图形学会学生会员!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
     论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
-<li><p> Invention patent "A Remote sensing image saliency Detection Method Based on innovative edge feature Extraction Method" has entered the substantive review stage!</br>
-    发明专利《一种基于创新边缘特征提取方法的遥感图像显著性检测方法》已进入实质审查阶段!</p></li>
-<li><p> I won the "LAN QIAO" National Collegiate Programming Contest, and the National Excellence Award in the C/C++ programming Group B!</br>
-    我获得"蓝桥杯"全国大学生编程竞赛C/C++程序设计B组国家优秀奖!</p></li>
 </ul>
 
 <h3><div style="color:#58ACFA">Recently accepted</h3>
