--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p></br> I have been recommended to Shanghai University for a doctoral degree!
+<li><p> I have been recommended to Shanghai University for a doctoral degree!</br>
     我保送至上海大学攻读博士研究生！</p></li>
 <li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
