--- a/index.html
+++ b/index.html
@@ -94,8 +94,6 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p> I have been recommended to Shanghai University for a doctoral degree!</br>
-    我保送至上海大学攻读博士研究生！</p></li>
 <li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
 <li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
@@ -104,11 +102,13 @@ Email: KunyeShen@outlook.com
     我参与了 VALSE(视觉与学习青年学者研讨会) 2021!</p></li>
 <li><p> The college's scientific research project "Deep learning based RGBD salient object detection" I participated in has been concluded!</br>
     我参与的院科研立项“基于深度学习的RGBD图像显著性检测”已结题!</p></li>
+<li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
+    论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
 </ul>
 
 <h3><div style="color:#58ACFA">Recently accepted</h3>
 
-<div class="publication">
+<div class="Recently accepted">
 <strong>
     Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images
 </strong>
@@ -141,6 +141,57 @@ Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
 <br>
 <a href="https://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=9474908&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50Lzk0NzQ5MDg=">[Paper]</a>
 <a href="https://github.com/Kunye-Shen/EMFINet">[Github]</a>
+</div>
+
+<h3><div style="color:#58ACFA">Publication</h3>
+
+<div class="publication">
+    
+<strong>2022</strong>
+    
+</br>
+<li>
+<strong>
+    Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images
+</strong>
+<br>
+Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang, Chenggang Yan
+</br>
+<em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.
+<br>
+<a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
+<a href="https://github.com/Kunye-Shen/ERPNet">[Github]</a>
+</li>
+</br>
+<li>
+<strong>
+    Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images
+</strong>
+<br>
+<b>Kunye Shen</b>, Xiaofei Zhou, Bin Wan, Ran Shi, Jiyong Zhang
+</br></br>
+<em>IEEE Geoscience and Remote Sensing Letters (<b>GRSL</b>)</em>, 2022.
+<br>
+<a href="https://ieeexplore.ieee.org/abstract/document/9739705/">[Paper]</a>
+<a href="https://github.com/Kunye-Shen/FSMINet">[Github]</a>
+</li>
+</br>
+
+<strong>2021</strong>
+<li>
+<strong>
+    Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images
+</strong>
+<br>
+Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
+</br>
+<em>IEEE Transactions on Geoscience and Remote Sensing (<b>T-GRS</b>)</em>, 2021.
+<br>
+<a href="https://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=9474908&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50Lzk0NzQ5MDg=">[Paper]</a>
+<a href="https://github.com/Kunye-Shen/EMFINet">[Github]</a>
+</li>
+</br>
+
 </div>
 
 <h3><div style="color:#58ACFA">Research</h3>
