--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Email: KunyeShen@outlook.com
 <h3><div style="color:#58ACFA">Publication</h3>
 
 <div class="publication">
-<h3><div style="color:red">2022</div></h3>
+<h3><div style="color:blue">2022</div></h3>
 <li>
 <strong>
 Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images
@@ -138,7 +138,7 @@ Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Dete
 <br>
 </li>
 
-<h3><div style="color:red">2021</div></h3>
+<h3><div style="color:blue">2021</div></h3>
 <li>
 <strong>
 Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images
