--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
+<li><p> I was recommended to Shanghai University for a doctoral degree！</br>
+    我保送至上海大学攻读博士研究生学位！</p></li>
 <li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
 <li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
     论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
 <li><p> I attended VALSE(Vision And Learning SEminar) 2021!</br>
     我参与了 VALSE(视觉与学习青年学者研讨会) 2021!</p></li>
-<li><p> The college's scientific research project "Deep learning based RGBD salient object detection" I participated in has been concluded!</br>
-    我参与的院科研立项“基于深度学习的RGBD图像显著性检测”已结题!</p></li>
 <li><p> My paper "Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-GRS!</br>
     论文"Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-GRS录用!</p></li>
 </ul>
