--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Email: KunyeShen@outlook.com
 CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images
 </strong>
 <br>
-Tong Qiao, Yuxing Chen, Xiaofei Zhou, Ran Shi, Hang Shao, <b>Kunye Shen</b> and Xiangyang Luo
+Tong Qiao, Yuxing Chen, Xiaofei Zhou, Ran Shi, Hang Shao, <b>Kunye Shen</b>, Xiangyang Luo
 </br>
 <em>IEEE Transactions on Cognitive and Developmental Systems (<b>T-CDS</b>)</em>, 2023.
 <br>
