--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
+<li><p> One paper has been newly selected as ESI Highly Cited Paper!</br>
+    1篇论文新入选ESI高被引论文!</p></li>
 <li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE T-CDS!</br>
     论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE T-CDS录用!</p></li>
 <li><p> I was recommended to Shanghai University for a doctoral degree！</br>
@@ -102,8 +104,6 @@ Email: KunyeShen@outlook.com
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
 <li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
     论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
-<li><p> I attended VALSE(Vision And Learning SEminar) 2021!</br>
-    我参与了 VALSE(视觉与学习青年学者研讨会) 2021!</p></li>
 </ul>
 
 <h3><div style="color:#58ACFA">Publication</h3>
@@ -134,7 +134,7 @@ Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang
 <em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.
 <br>
 <a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
-<a href="https://github.com/Kunye-Shen/ERPNet">[Github]</a>
+<a href="https://github.com/Kunye-Shen/ERPNet">[Code]</a>
 <br>
 </li>
 
@@ -148,7 +148,7 @@ Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Dete
 <em>IEEE Geoscience and Remote Sensing Letters (<b>GRSL</b>)</em>, 2022.
 <br>
 <a href="https://ieeexplore.ieee.org/abstract/document/9739705/">[Paper]</a>
-<a href="https://github.com/Kunye-Shen/FSMINet">[Github]</a>
+<a href="https://github.com/Kunye-Shen/FSMINet">[Code]</a>
 <br>
 </li>
 
@@ -163,7 +163,7 @@ Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan
 <em>IEEE Transactions on Geoscience and Remote Sensing (<b>T-GRS</b>)</em>, 2021.
 <br>
 <a href="https://ieeexplore.ieee.org/stampPDF/getPDF.jsp?tp=&arnumber=9474908&ref=aHR0cHM6Ly9pZWVleHBsb3JlLmllZWUub3JnL2Fic3RyYWN0L2RvY3VtZW50Lzk0NzQ5MDg=">[Paper]</a>
-<a href="https://github.com/Kunye-Shen/EMFINet">[Github]</a>
+<a href="https://github.com/Kunye-Shen/EMFINet">[Code]</a>
 <br>
 </li>
 
