--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optica
 <br>
 Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang, Chenggang Yan
 </br>
-<em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.
+<em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.[<div style="color:red">ESI highly cited paper]
 <br>
 <a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
 <a href="https://github.com/Kunye-Shen/ERPNet">[Code]</a>
