--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ Email: KunyeShen@outlook.com
 </tr>
 
 <h3>
-[<a href="https://scholar.google.com.hk/citations?user=q6_PkywAAAAJ&hl=zh-CN" target="blank" style="color:#58ACFA">Google Scholar(谷歌学术)</a>]
-[<a href="https://github.com/Kunye-Shen" target="blank" style="color:#58ACFA">Code & Data</a>]
+[<a href="https://scholar.google.com.hk/citations?user=q6_PkywAAAAJ&hl=zh-CN" target="blank" style="color:#58ACFA">Google Scholar (谷歌学术)</a>]
+[<a href="https://github.com/Kunye-Shen" target="blank" style="color:#58ACFA">Github</a>]
 </h3>
 
 <h3><div style="color:#58ACFA">Education</div></h3>
@@ -131,7 +131,7 @@ Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optica
 <br>
 Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang, Chenggang Yan
 </br>
-<em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.[<div style="color:red">ESI highly cited paper]
+<em>IEEE Transactions on Cybernetics (<b>T-CYB</b>)</em>, 2022.[<p style="color:red">ESI highly cited paper</p>]
 <br>
 <a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
 <a href="https://github.com/Kunye-Shen/ERPNet">[Code]</a>
