--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@ Email: KunyeShen@outlook.com
 
 <h3><div style="color:red">News</div></h3>
 <ul>
-<li><p> One paper has been newly selected as ESI Highly Cited Paper!</br>
+<li><p> One paper has been newly selected as ESI Highly Cited Paper !</br>
     1篇论文新入选ESI高被引论文!</p></li>
-<li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE T-CDS!</br>
+<li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE T-CDS !</br>
     论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE T-CDS录用!</p></li>
-<li><p> I was recommended to Shanghai University for a doctoral degree！</br>
+<li><p> I was recommended to Shanghai University for a doctoral degree !</br>
     我保送至上海大学攻读博士研究生学位！</p></li>
-<li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB!</br>
+<li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB !</br>
     论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
-<li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL!</br>
+<li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL !</br>
     论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
 </ul>
 
