--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Home</title>
+    <title>主页</title>
     <base href="https://kunye-shen.github.io/KunyeShen-Homepage/index.html">
 </head>
 
@@ -51,7 +51,7 @@
 	<div>
         <h2><hr><a name="biography"></a>Brief Biography (个人简介)</h2>
         <ul>
-			I am currently pursuing a Ph.D. in Information and Communication Engineering at Shanghai University under the guidance of Prof. <a href="https://scholar.google.com.hk/citations?user=Sd5VB2cAAAAJ&hl=zh-CN">Zhi Liu</a>. Prior to this, I completed my B.E. degree at HangzhouDianzi University, led by Prof. <a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">Xiaofei Zhou</a>.
+			I am currently pursuing a Ph.D. in Information and Communication Engineering at Shanghai University under the guidance of Prof. <a href="https://scholar.google.com.hk/citations?user=Sd5VB2cAAAAJ&hl=zh-CN">Zhi Liu</a>. Prior to this, I completed my B.E. degree at HangzhouDianzi University, led by Prof. <a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">Xiaofei Zhou</a>。
         </ul>
 		
 		 <ul>
@@ -69,14 +69,14 @@
 		   	<li><p> One paper has been newly selected as ESI Highly Cited Paper !</br>
 			1篇论文新入选ESI高被引论文!</p></li>
 
-			<li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE T-CDS !</br>
-				论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE T-CDS录用!</p></li>
+			<li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE TCDS !</br>
+				论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE TCDS录用!</p></li>
 			
 			<li><p> I was recommended to Shanghai University for a doctoral degree !</br>
 			我保送至上海大学攻读博士研究生学位！</p></li>
 		
-			<li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE T-CYB !</br>
-			论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE T-CYB录用!</p></li>
+			<li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE TCYB !</br>
+			论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE TCYB录用!</p></li>
 		
 			<li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL !</br>
 			论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
