--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div>
         <h2><hr><a name="biography"></a>Brief Biography (个人简介)</h2>
         <ul>
-			I am currently pursuing a Ph.D. in Information and Communication Engineering at Shanghai University under the guidance of Prof. <a href="https://scholar.google.com.hk/citations?user=Sd5VB2cAAAAJ&hl=zh-CN">Zhi Liu</a>. Prior to this, I completed my B.E. degree at HangzhouDianzi University, led by Prof. <a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">Xiaofei Zhou</a>。
+			I am currently pursuing a Ph.D. in Information and Communication Engineering at Shanghai University under the guidance of Prof. <a href="https://scholar.google.com.hk/citations?user=Sd5VB2cAAAAJ&hl=zh-CN">Zhi Liu</a>. Prior to this, I completed my B.E. degree at HangzhouDianzi University, led by Prof. <a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">Xiaofei Zhou</a>.
         </ul>
 		
 		 <ul>
