--- a/education.html
+++ b/education.html
@@ -23,12 +23,12 @@
 
 <ul>
 <li><p>09/2019-06/2023: HangzhouDianzi University (HDU), B.E.  </p></li>
-<li><p>09/2023-Now: Shanghai University (SHU), Ph.D.</p></li>
+<li><p>09/2023-Now: Shanghai University (SHU), Ph.D Candidate.</p></li>
 
 </ul>
 <ul>
-<li><p>2019.09-2023.06: 杭州电子科技大学，工学学士；  </p></li>
-<li><p>2023.09-Now: 上海大学, 工学博士；</p></li>
+<li><p>2019.09-2023.06: 杭州电子科技大学，工学学士。  </p></li>
+<li><p>2023.09-Now: 上海大学, 博士研究生。</p></li>
 </ul>
 </div>
 
