--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 E-mail: KunyeShen@outlook.com<br>
                 <a href="https://scholar.google.com.hk/citations?user=q6_PkywAAAAJ&hl=zh-CN" target="_blank">[Google Scholar (谷歌学术)]</a>
 				<a href="https://github.com/Kunye-Shen" target="_blank">[Github]</a>
+		    		<a href="https://dblp.org/pid/311/2458.html" target="_blank">[DBLP]</a>
 				<br>
                
             </p>			 
