--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
  <div>
         <h2><hr><a name="news"></a>News (新闻)</h2>
         <ul>		      
-		   	<li><p> One paper has been newly selected as ESI Highly Cited Paper !</br>
+			<li><p> My paper "360 Omnidirectional Salient Object Detection with Multi-scale Interaction and Densely-Connected Prediction" was accepted by ICIG !</br>
+			论文"360 Omnidirectional Salient Object Detection with Multi-scale Interaction and Densely-Connected Prediction"被ICIG录用!</p></li>  	
+		
+			<li><p> One paper has been newly selected as ESI Highly Cited Paper !</br>
 			1篇论文新入选ESI高被引论文!</p></li>
 
 			<li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE TCDS !</br>
-				论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE TCDS录用!</p></li>
+			论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE TCDS录用!</p></li>
 			
 			<li><p> I was recommended to Shanghai University for a doctoral degree !</br>
 			我保送至上海大学攻读博士研究生学位！</p></li>
 		
 			<li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE TCYB !</br>
 			论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE TCYB录用!</p></li>
-		
-			<li><p> My paper "Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images" was accepted by IEEE GRSL !</br>
-			论文"Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images"被IEEE GRSL录用!</p></li>
         </ul>
     </div>
 
