--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,13 @@
                 <a href="https://ieeexplore.ieee.org/document/10121791">[Paper]</a>
             </p></li>
 
+		<li><p>
+                Haowei Dai, Liuxin Bao, <b>Kunye Shen</b>, Xiaofei Zhou, Jiyong Zhang.<br>
+                360 Omnidirectional Salient Object Detection with Multi-scale Interaction and Densely-Connected Prediction.<br>
+                <i>International Conference on Image and Graphics (<b>ICIG</b>)</i>, 2023.<br>
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-46305-1_35">[Paper]</a>
+            </p></li>
+
 		</ol>
     </div>
 
