--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>KunyeShen-Homepage</title>
+    <title>Kunye Shen</title>
     <base href="https://kunye-shen.github.io/KunyeShen-Homepage/index.html">
 </head>
 
