--- a/publications.html
+++ b/publications.html
@@ -20,6 +20,19 @@
 
     <h2 style="margin-top: 0em">Publications (学术论文)</h2>
 	<div>
+        <h2><hr><a name="2024"></a>2023</h2>
+        <ol>  
+		<li><p>
+                <b>Kunye Shen</b>, Xiaofei Zhou, Zhi Liu.<br>
+                MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects.<br>
+                <i>IEEE Transactions on Industrial Informatics (<b>TII</b>)</i>, 2024.<br>
+                <a href="https://ieeexplore.ieee.org/document/10454019">[Paper]</a>
+            </p></li>
+
+		</ol>
+    </div>
+	
+	<div>
         <h2><hr><a name="2023"></a>2023</h2>
         <ol>  
 		<li><p>
