--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
  <div>
         <h2><hr><a name="news"></a>News (新闻)</h2>
         <ul>		      
+			<li><p> My paper "MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects" was accepted by IEEE TII !</br>
+			论文"MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects"被IEEE TII录用!</p></li>	
+		
 			<li><p> My paper "360 Omnidirectional Salient Object Detection with Multi-scale Interaction and Densely-Connected Prediction" was accepted by ICIG !</br>
 			论文"360 Omnidirectional Salient Object Detection with Multi-scale Interaction and Densely-Connected Prediction"被ICIG录用!</p></li>  	
 		
@@ -74,9 +77,6 @@
 			
 			<li><p> I was recommended to Shanghai University for a doctoral degree !</br>
 			我保送至上海大学攻读博士研究生学位！</p></li>
-		
-			<li><p> My paper "Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images" was accepted by IEEE TCYB !</br>
-			论文"Edge-guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images"被IEEE TCYB录用!</p></li>
         </ul>
     </div>
 
