--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,7 @@
                 MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects.<br>
                 <i>IEEE Transactions on Industrial Informatics (<b>TII</b>)</i>, 2024.<br>
                 <a href="https://ieeexplore.ieee.org/document/10454019">[Paper]</a>
+		<a href="https://github.com/Kunye-Shen/MINet">[Code]</a>
             </p></li>
 
 		</ol>
