--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
     <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
 	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
+    <div class="menu-item"><a href="services.html">Services (学术服务)</a></div>
 </td>
 <td id="layout-content">
 
