--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 </td>
 <td id="layout-content">
 
-	<h2><a name="Journal Reviewer (国际学术期刊审稿人)"></a>Journal Reviewer</h2>
+	<h2><a name="Journal Reviewer (国际学术期刊审稿人):"></a>Journal Reviewer (国际学术期刊审稿人):</h2>
     <ul>
         <li><p>IEEE Transactions on Instrumentation and Measurement</p></li>
 
