--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 	
  <div>
         <h2><hr><a name="news"></a>News (新闻)</h2>
-        <ul>		      
+        <ul>		<li><p> My paper "ADMNet: Attention-guided Densely Multi-scale Network for Lightweight Salient Object Detection" was accepted by IEEE TMM !</br>
+			论文"ADMNet: Attention-guided Densely Multi-scale Network for Lightweight Salient Object Detection"被IEEE TMM录用!</p></li>
+		
 			<li><p> My paper "MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects" was accepted by IEEE TII !</br>
 			论文"MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects"被IEEE TII录用!</p></li>	
 		
@@ -74,9 +76,6 @@
 
 			<li><p> My paper "CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images" was accepted by IEEE TCDS !</br>
 			论文"CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images"被IEEE TCDS录用!</p></li>
-			
-			<li><p> I was recommended to Shanghai University for a doctoral degree !</br>
-			我保送至上海大学攻读博士研究生学位！</p></li>
         </ul>
     </div>
 
