--- a/publications.html
+++ b/publications.html
@@ -8,86 +8,126 @@
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Kunye Shen (沈坤烨)'s Homepage</h1><hr>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-    <div class="menu-item"><a href="index.html">Home (首页)</a></div>
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
-	<div class="menu-item"><a href="publications.html" class="current">Publications (学术论文)</a></div>
-</td>
-<td id="layout-content">
+    <h1 style="padding-left: 0.5em">Kunye Shen (沈坤烨)'s Homepage</h1>
+    <hr>
+    <table summary="Table for page layout." id="tlayout">
+        <tr valign="top">
+            <td id="layout-menu">
+                <div class="menu-item"><a href="index.html">Home (首页)</a></div>
+                <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+                <div class="menu-item"><a href="publications.html" class="current">Publications (学术论文)</a></div>
+            </td>
+            <td id="layout-content">
 
-    <h2 style="margin-top: 0em">Publications (学术论文)</h2>
-	<div>
-        <h2><hr><a name="2024"></a>2024</h2>
-        <ol>  
-		<li><p>
-                <b>Kunye Shen</b>, Xiaofei Zhou, Zhi Liu.<br>
-                MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip Steel Surface Defects.<br>
-                <i>IEEE Transactions on Industrial Informatics (<b>TII</b>)</i>, 2024.<br>
-                <a href="https://ieeexplore.ieee.org/document/10454019">[Paper]</a>
-		<a href="https://github.com/Kunye-Shen/MINet">[Code]</a>
-            </p></li>
+                <h2 style="margin-top: 0em">Publications (学术论文)</h2>
+                <div>
+                    <h2>
+                        <hr><a name="2024"></a>2024
+                    </h2>
+                    <ol>
+                        <li>
+                            <p>
+                                Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu.<br>
+                                ADMNet: Attention-guided Densely Multi-scale Network for Lightweight Salient Object
+                                Detection.<br>
+                                <i>IEEE Transactions on Multimedia (<b>TMM</b>)</i>, 2024.<br>
+                                <a href="https://ieeexplore.ieee.org/document/10555313">[Paper]</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <b>Kunye Shen</b>, Xiaofei Zhou, Zhi Liu.<br>
+                                MINet: Multiscale Interactive Network for Real-Time Salient Object Detection of Strip
+                                Steel Surface Defects.<br>
+                                <i>IEEE Transactions on Industrial Informatics (<b>TII</b>)</i>, 2024.<br>
+                                <a href="https://ieeexplore.ieee.org/document/10454019">[Paper]</a>
+                                <a href="https://github.com/Kunye-Shen/MINet">[Code]</a>
+                            </p>
+                        </li>
 
-		</ol>
-    </div>
-	
-	<div>
-        <h2><hr><a name="2023"></a>2023</h2>
-        <ol>  
-		<li><p>
-                Haowei Dai, Liuxin Bao, <b>Kunye Shen</b>, Xiaofei Zhou, Jiyong Zhang.<br>
-                360 Omnidirectional Salient Object Detection with Multi-scale Interaction and Densely-Connected Prediction.<br>
-                <i>International Conference on Image and Graphics (<b>ICIG</b>)</i>, 2023.<br>
-                <a href="https://link.springer.com/chapter/10.1007/978-3-031-46305-1_35">[Paper]</a>
-            </p></li>
-			<li><p>
-                Tong Qiao, Yuxing Chen, Xiaofei Zhou, Ran Shi, Hang Shao, <b>Kunye Shen</b>, Xiangyang Luo.<br>
-                CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake Images.<br>
-                <i>IEEE Transactions on Cognitive and Developmental Systems (<b>TCDS</b>)</i>, 2023.<br>
-                <a href="https://ieeexplore.ieee.org/document/10121791">[Paper]</a>
-            </p></li>
+                    </ol>
+                </div>
 
-		</ol>
-    </div>
+                <div>
+                    <h2>
+                        <hr><a name="2023"></a>2023
+                    </h2>
+                    <ol>
+                        <li>
+                            <p>
+                                Haowei Dai, Liuxin Bao, <b>Kunye Shen</b>, Xiaofei Zhou, Jiyong Zhang.<br>
+                                360 Omnidirectional Salient Object Detection with Multi-scale Interaction and
+                                Densely-Connected Prediction.<br>
+                                <i>International Conference on Image and Graphics (<b>ICIG</b>)</i>, 2023.<br>
+                                <a href="https://link.springer.com/chapter/10.1007/978-3-031-46305-1_35">[Paper]</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Tong Qiao, Yuxing Chen, Xiaofei Zhou, Ran Shi, Hang Shao, <b>Kunye Shen</b>, Xiangyang
+                                Luo.<br>
+                                CSC-Net: Cross-color Spatial Co-occurrence Matrix Network for Detecting Synthesized Fake
+                                Images.<br>
+                                <i>IEEE Transactions on Cognitive and Developmental Systems (<b>TCDS</b>)</i>, 2023.<br>
+                                <a href="https://ieeexplore.ieee.org/document/10121791">[Paper]</a>
+                            </p>
+                        </li>
 
-    <div>
-        <h2><hr><a name="2022"></a>2022</h2>
-        <ol>  
-			<li><p>
-                Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang, Chenggang Yan.<br>
-                Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images.<br>
-                <i>IEEE Transactions on Cybernetics (<b>TCYB</b>)</i>, 2022. [<font style="color:red">ESI highly cited paper</font>]<br>
-                <a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
-                <a href="https://github.com/Kunye-Shen/ERPNet">[Code]</a>
-            </p></li>
+                    </ol>
+                </div>
 
-            <li><p>
-                <b>Kunye Shen</b>, Xiaofei Zhou, Bin Wan, Ran Shi, Jiyong Zhang.<br>
-                Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in Optical Remote Sensing Images.<br>
-                <i>IEEE Geoscience and Remote Sensing Letters (<b>GRSL</b>)</i>, 2022.<br>
-                <a href="https://ieeexplore.ieee.org/abstract/document/9739705/">[Paper]</a>
-                <a href="https://github.com/Kunye-Shen/FSMINet">[Code]</a>
-            </p></li>
-		</ol>
-    </div>
+                <div>
+                    <h2>
+                        <hr><a name="2022"></a>2022
+                    </h2>
+                    <ol>
+                        <li>
+                            <p>
+                                Xiaofei Zhou, <b>Kunye Shen</b>, Li Weng, Runmin Cong, Bolun Zheng, Jiyong Zhang,
+                                Chenggang Yan.<br>
+                                Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote
+                                Sensing Images.<br>
+                                <i>IEEE Transactions on Cybernetics (<b>TCYB</b>)</i>, 2022. [<font style="color:red">
+                                    ESI highly cited paper</font>]<br>
+                                <a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
+                                <a href="https://github.com/Kunye-Shen/ERPNet">[Code]</a>
+                            </p>
+                        </li>
 
-    <div>
-        <h2><hr><a name="2021"></a>2021</h2>
-        <ol>  
-			<li><p>
-                Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan.<br>
-                Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote Sensing Images.<br>
-                <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>)</i>, 2021.<br>
-                <a href="https://ieeexplore.ieee.org/document/9474908">[Paper]</a>
-                <a href="https://github.com/Kunye-Shen/EMFINet">[Code]</a>
-            </p></li>
-		</ol>
-    </div>
+                        <li>
+                            <p>
+                                <b>Kunye Shen</b>, Xiaofei Zhou, Bin Wan, Ran Shi, Jiyong Zhang.<br>
+                                Fully Squeezed Multi-Scale Inference Network for Fast and Accurate Saliency Detection in
+                                Optical Remote Sensing Images.<br>
+                                <i>IEEE Geoscience and Remote Sensing Letters (<b>GRSL</b>)</i>, 2022.<br>
+                                <a href="https://ieeexplore.ieee.org/abstract/document/9739705/">[Paper]</a>
+                                <a href="https://github.com/Kunye-Shen/FSMINet">[Code]</a>
+                            </p>
+                        </li>
+                    </ol>
+                </div>
 
-</td>
-</tr>
-</table>
+                <div>
+                    <h2>
+                        <hr><a name="2021"></a>2021
+                    </h2>
+                    <ol>
+                        <li>
+                            <p>
+                                Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan.<br>
+                                Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote
+                                Sensing Images.<br>
+                                <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>)</i>, 2021.<br>
+                                <a href="https://ieeexplore.ieee.org/document/9474908">[Paper]</a>
+                                <a href="https://github.com/Kunye-Shen/EMFINet">[Code]</a>
+                            </p>
+                        </li>
+                    </ol>
+                </div>
+
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
