--- a/publications.html
+++ b/publications.html
@@ -87,8 +87,7 @@
                                 Chenggang Yan.<br>
                                 Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote
                                 Sensing Images.<br>
-                                <i>IEEE Transactions on Cybernetics (<b>TCYB</b>)</i>, 2022. [<font style="color:red">
-                                    ESI highly cited paper</font>]<br>
+                                <i>IEEE Transactions on Cybernetics (<b>TCYB</b>)</i>, 2022. [<font style="color:red">ESI highly cited paper</font>]<br>
                                 <a href="https://ieeexplore.ieee.org/document/9756846">[Paper]</a>
                                 <a href="https://github.com/Kunye-Shen/ERPNet">[Code]</a>
                             </p>
