--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,7 @@
                                 Detection.<br>
                                 <i>IEEE Transactions on Multimedia (<b>TMM</b>)</i>, 2024.<br>
                                 <a href="https://ieeexplore.ieee.org/document/10555313">[Paper]</a>
+                                <a href="https://github.com/Kunye-Shen/ADMNet">[Code]</a>
                             </p>
                         </li>
                         <li>
