--- a/publications.html
+++ b/publications.html
@@ -115,8 +115,7 @@
                         <li>
                             <p>
                                 Xiaofei Zhou, <b>Kunye Shen</b>, Zhi Liu, Chen Gong, Jiyong Zhang, Chenggang Yan.<br>
-                                Edge-Guided Recurrent Positioning Network for Salient Object Detection in Optical Remote
-                                Sensing Images.<br>
+                                Edge-Aware Multiscale Feature Integration Network for Salient Object Detection in Optical Remote Sensing Images.<br>
                                 <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>)</i>, 2021.<br>
                                 <a href="https://ieeexplore.ieee.org/document/9474908">[Paper]</a>
                                 <a href="https://github.com/Kunye-Shen/EMFINet">[Code]</a>
