--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <td align="left">
             <p><span style="font-size: 110%"><b>Kunye Shen</b></span></p>
             <p>
-                Ph.D Candidate<br>
-				School of Communication and Information Engineering<br>
+                Ph.D C和idate<br>
+				School of Communication 和 Information Engineering<br>
 				Shanghai University<br>
 				上海大学通信与信息工程学院<br>
             </p>
@@ -52,11 +52,11 @@
 	<div>
         <h2><hr><a name="biography"></a>Brief Biography (个人简介)</h2>
         <ul>
-			I am currently pursuing a Ph.D. in Information and Communication Engineering at Shanghai University under the guidance of Prof. <a href="https://scholar.google.com.hk/citations?user=Sd5VB2cAAAAJ&hl=zh-CN">Zhi Liu</a>. Prior to this, I completed my B.E. degree at HangzhouDianzi University, led by Prof. <a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">Xiaofei Zhou</a>.
+			I am currently pursuing a Ph.D. in Information 和 Communication Engineering at Shanghai University. Prior to this, I completed my B.E. degree at HangzhouDianzi University, led by Prof. <a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">Xiaofei Zhou</a>.
         </ul>
 		
 		 <ul>
-			我目前在上海大学攻读信息与通信工程博士学位，师从<a href="https://scholar.google.com.hk/citations?user=Sd5VB2cAAAAJ&hl=zh-CN">刘志</a>教授。在此之前，我在杭州电子科技大学获得学士学位，师从<a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">周晓飞</a>教授。
+			我目前在上海大学攻读信息与通信工程博士学位。在此之前，我在杭州电子科技大学获得学士学位，师从<a href="https://scholar.google.com.hk/citations?user=2PUAFW8AAAAJ&hl=zh-CN">周晓飞</a>教授。
         </ul>
     </div>
 	
