--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <td align="left">
             <p><span style="font-size: 110%"><b>Kunye Shen</b></span></p>
             <p>
-                Ph.D Candidate<br>
-				School of Communication and Information Engineering<br>
+                Ph.D Student<br>
+				School of Communication 和 Information Engineering<br>
 				Shanghai University<br>
 				上海大学通信与信息工程学院<br>
             </p>
