--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
 
 <ul>
 <li><p>09/2019-06/2023: HangzhouDianzi University (HDU), B.E.  </p></li>
-<li><p>09/2023-Now: Shanghai University (SHU), Ph.D Candidate.</p></li>
+<li><p>09/2023-Now: Shanghai University (SHU), Ph.D Student.</p></li>
 
 </ul>
 <ul>
